dist/bookmarks/Deployment.bookmarks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: bookmarks
  name: bookmarks
  namespace: bookmarks
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: bookmarks-app-bookmarks-app-deployment-c8465c2f
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bookmarks
        cdk8s.io/metadata.addr: bookmarks-app-bookmarks-app-deployment-c8465c2f
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: NEXTAUTH_URL
              value: https://bookmarks.cmdcentral.xyz/api/v1/auth
            - name: NEXTAUTH_SECRET
              valueFrom:
                secretKeyRef:
                  key: NEXTAUTH_SECRET
                  name: secrets
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  key: DATABASE_URL
                  name: secrets
            - name: NEXT_PUBLIC_DISABLE_REGISTRATION
              value: "true"
            - name: NEXT_PUBLIC_CREDENTIALS_ENABLED
              value: "false"
            - name: OPENAI_MODEL
              value: "@cf/meta/llama-3.3-70b-instruct-fp8-fast"
            - name: CUSTOM_OPENAI_BASE_URL
              valueFrom:
                secretKeyRef:
                  key: CUSTOM_OPENAI_BASE_URL
                  name: ai
            - name: OPENAI_API_KEY
              valueFrom:
                secretKeyRef:
                  key: OPENAI_API_KEY
                  name: ai
            - name: NEXT_PUBLIC_AUTHENTIK_ENABLED
              value: "true"
            - name: AUTHENTIK_CUSTOM_NAME
              value: Cmdcentral Login
            - name: AUTHENTIK_ISSUER
              value: https://login.cmdcentral.xyz/application/o/bookmarks
            - name: AUTHENTIK_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: AUTHENTIK_CLIENT_ID
                  name: secrets
            - name: AUTHENTIK_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: AUTHENTIK_CLIENT_SECRET
                  name: secrets
          image: ghcr.io/linkwarden/linkwarden
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
          name: bookmarks
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
          resources:
            limits:
              memory: 6144Mi
            requests:
              cpu: 200m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /data/data
              name: pvc-data
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
