dist/bookmarks/Service.bookmarks.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmarks
  namespace: bookmarks
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 80
  selector:
    cdk8s.io/metadata.addr: bookmarks-app-bookmarks-app-deployment-c8465c2f
  type: ClusterIP
